Fixed nav link alignment

--- a/resources/assets/sass/common/navbar.scss
+++ b/resources/assets/sass/common/navbar.scss
@@ -18,3 +18,8 @@
   font-size: 16px;
   text-transform: uppercase;
 }
+
+.nav-link {
+  align-content: center;
+  height: 100%;
+}
